language model: experiments
Former-commit-id: 07eb3473479f72868b847c93ddf1a0389c999c27

--- a/notebooks/evaluations-make_conll.ipynb
+++ b/notebooks/evaluations-make_conll.ipynb
@@ -17,15 +17,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "../datasets/csvs/zhou_valid.csv\n",
-      "../outputs/dblstm_crf/lr5.00e-04_hs512x256x128x64_ctx-p3_wang2vec_s100/00/Yhat_valid.csv\n"
+      "../outputs/dblstm_crf/lr5.00e-04_hs128x128x128x64_ctx-p1_glove_s50/00/Yhat_valid.csv\n"
      ]
     }
    ],
@@ -37,7 +39,7 @@
     "\n",
     "\n",
     "MODEL_NAME='dblstm_crf'\n",
-    "HPARAMS_STR='lr5.00e-04_hs512x256x128x64_ctx-p3_wang2vec_s100'\n",
+    "HPARAMS_STR='lr5.00e-04_hs128x128x128x64_ctx-p1_glove_s50'\n",
     "MODEL_V= '00'\n",
     "INPUT_DIR= '../datasets/csvs/'\n",
     "OUTPUT_DIR='../outputs/'\n",
@@ -55,14 +57,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(12298, 17) (12298, 2)\n"
+      "((12298, 17), (12298, 2))\n"
      ]
     }
    ],
@@ -74,8 +78,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -92,26 +98,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -179,8 +174,8 @@
        "      <td>rei</td>\n",
        "      <td>(A2*</td>\n",
        "      <td>A2</td>\n",
-       "      <td>(A2*</td>\n",
-       "      <td>A2</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123847</th>\n",
@@ -202,7 +197,7 @@
        "      <td>*</td>\n",
        "      <td>A2</td>\n",
        "      <td>*</td>\n",
-       "      <td>A2</td>\n",
+       "      <td>*</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123848</th>\n",
@@ -223,8 +218,8 @@
        "      <td>rei</td>\n",
        "      <td>*)</td>\n",
        "      <td>A2</td>\n",
-       "      <td>*)</td>\n",
-       "      <td>A2</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123849</th>\n",
@@ -245,8 +240,8 @@
        "      <td>rei</td>\n",
        "      <td>(V*)</td>\n",
        "      <td>V</td>\n",
-       "      <td>(V*)</td>\n",
-       "      <td>V</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123850</th>\n",
@@ -267,8 +262,8 @@
        "      <td>rei</td>\n",
        "      <td>(A1*</td>\n",
        "      <td>A1</td>\n",
-       "      <td>(A1*</td>\n",
-       "      <td>A1</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -283,16 +278,16 @@
        "123849   4  2879  5100    0       estão      estar  estar  estar    1   entre   \n",
        "123850   5  2879  5100    0           o          o  estar      -    1   entre   \n",
        "\n",
-       "       CTX_P-2    CTX_P-1 CTX_P+1 CTX_P+2 CTX_P+3 ARG_0 ARG_1   Y_0 Y_1  \n",
-       "IDX                                                                      \n",
-       "123846       o  convidado       o       -     rei  (A2*    A2  (A2*  A2  \n",
-       "123847       o  convidado       o       -     rei     *    A2     *  A2  \n",
-       "123848       o  convidado       o       -     rei    *)    A2    *)  A2  \n",
-       "123849       o  convidado       o       -     rei  (V*)     V  (V*)   V  \n",
-       "123850       o  convidado       o       -     rei  (A1*    A1  (A1*  A1  "
+       "       CTX_P-2    CTX_P-1 CTX_P+1 CTX_P+2 CTX_P+3 ARG_0 ARG_1 Y_0 Y_1  \n",
+       "IDX                                                                    \n",
+       "123846       o  convidado       o       -     rei  (A2*    A2   *   *  \n",
+       "123847       o  convidado       o       -     rei     *    A2   *   *  \n",
+       "123848       o  convidado       o       -     rei    *)    A2   *   *  \n",
+       "123849       o  convidado       o       -     rei  (V*)     V   *   *  \n",
+       "123850       o  convidado       o       -     rei  (A1*    A1   *   *  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -370,38 +365,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/Varela/anaconda/envs/tensorflow/lib/python3.6/site-packages/ipykernel_launcher.py:9: SettingWithCopyWarning: \n",
+      "/Users/guilhermevarela/anaconda/lib/python2.7/site-packages/ipykernel/__main__.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  if __name__ == '__main__':\n"
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
      ]
     },
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -419,7 +402,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>-</td>\n",
-       "      <td>(A2*</td>\n",
+       "      <td>*</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -439,7 +422,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>-</td>\n",
-       "      <td>*)</td>\n",
+       "      <td>*</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -449,7 +432,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>estar</td>\n",
-       "      <td>(V*)</td>\n",
+       "      <td>*</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -459,7 +442,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>-</td>\n",
-       "      <td>(A1*</td>\n",
+       "      <td>*</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -471,15 +454,15 @@
        "</div>"
       ],
       "text/plain": [
-       "    FUNC  ARG0 ARG1 ARG2 ARG3 ARG4 ARG5\n",
-       "0      -  (A2*                         \n",
-       "1      -     *                         \n",
-       "2      -    *)                         \n",
-       "3  estar  (V*)                         \n",
-       "4      -  (A1*                         "
+       "    FUNC ARG0 ARG1 ARG2 ARG3 ARG4 ARG5\n",
+       "0      -    *                         \n",
+       "1      -    *                         \n",
+       "2      -    *                         \n",
+       "3  estar    *                         \n",
+       "4      -    *                         "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,38 +483,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/Varela/anaconda/envs/tensorflow/lib/python3.6/site-packages/ipykernel_launcher.py:9: SettingWithCopyWarning: \n",
+      "/Users/guilhermevarela/anaconda/lib/python2.7/site-packages/ipykernel/__main__.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  if __name__ == '__main__':\n"
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
      ]
     },
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -609,7 +580,7 @@
        "4      -  (A1*                         "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,21 +603,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (tensorflow)",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "tensorflow"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
