--- a/notebooks/evaluations-make_conll.ipynb
+++ b/notebooks/evaluations-make_conll.ipynb
@@ -17,17 +17,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "../datasets/csvs/zhou_valid.csv\n",
-      "../outputs/dblstm_crf/lr5.00e-04_hs128x128x128x64_ctx-p1_glove_s50/00/Yhat_valid.csv\n"
+      "../outputs/dblstm_crf/lr5.00e-04_hs512x64_ctx-p1_glove_s50/08/Yhat_valid.csv\n"
      ]
     }
    ],
@@ -39,8 +37,8 @@
     "\n",
     "\n",
     "MODEL_NAME='dblstm_crf'\n",
-    "HPARAMS_STR='lr5.00e-04_hs128x128x128x64_ctx-p1_glove_s50'\n",
-    "MODEL_V= '00'\n",
+    "HPARAMS_STR='lr5.00e-04_hs512x64_ctx-p1_glove_s50'\n",
+    "MODEL_V= '08'\n",
     "INPUT_DIR= '../datasets/csvs/'\n",
     "OUTPUT_DIR='../outputs/'\n",
     "\n",
@@ -57,16 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "((12298, 17), (12298, 2))\n"
+      "(12298, 17) (12298, 2)\n"
      ]
     }
    ],
@@ -78,10 +74,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -98,15 +92,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -174,8 +179,8 @@
        "      <td>rei</td>\n",
        "      <td>(A2*</td>\n",
        "      <td>A2</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
+       "      <td>(AM-LOC*</td>\n",
+       "      <td>AM-LOC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123847</th>\n",
@@ -197,7 +202,7 @@
        "      <td>*</td>\n",
        "      <td>A2</td>\n",
        "      <td>*</td>\n",
-       "      <td>*</td>\n",
+       "      <td>AM-LOC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123848</th>\n",
@@ -218,8 +223,8 @@
        "      <td>rei</td>\n",
        "      <td>*)</td>\n",
        "      <td>A2</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
+       "      <td>*)</td>\n",
+       "      <td>AM-LOC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123849</th>\n",
@@ -240,8 +245,8 @@
        "      <td>rei</td>\n",
        "      <td>(V*)</td>\n",
        "      <td>V</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
+       "      <td>(V*)</td>\n",
+       "      <td>V</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123850</th>\n",
@@ -262,8 +267,8 @@
        "      <td>rei</td>\n",
        "      <td>(A1*</td>\n",
        "      <td>A1</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
+       "      <td>(A1*</td>\n",
+       "      <td>A1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -278,16 +283,24 @@
        "123849   4  2879  5100    0       estão      estar  estar  estar    1   entre   \n",
        "123850   5  2879  5100    0           o          o  estar      -    1   entre   \n",
        "\n",
-       "       CTX_P-2    CTX_P-1 CTX_P+1 CTX_P+2 CTX_P+3 ARG_0 ARG_1 Y_0 Y_1  \n",
-       "IDX                                                                    \n",
-       "123846       o  convidado       o       -     rei  (A2*    A2   *   *  \n",
-       "123847       o  convidado       o       -     rei     *    A2   *   *  \n",
-       "123848       o  convidado       o       -     rei    *)    A2   *   *  \n",
-       "123849       o  convidado       o       -     rei  (V*)     V   *   *  \n",
-       "123850       o  convidado       o       -     rei  (A1*    A1   *   *  "
+       "       CTX_P-2    CTX_P-1 CTX_P+1 CTX_P+2 CTX_P+3 ARG_0 ARG_1       Y_0  \\\n",
+       "IDX                                                                       \n",
+       "123846       o  convidado       o       -     rei  (A2*    A2  (AM-LOC*   \n",
+       "123847       o  convidado       o       -     rei     *    A2         *   \n",
+       "123848       o  convidado       o       -     rei    *)    A2        *)   \n",
+       "123849       o  convidado       o       -     rei  (V*)     V      (V*)   \n",
+       "123850       o  convidado       o       -     rei  (A1*    A1      (A1*   \n",
+       "\n",
+       "           Y_1  \n",
+       "IDX             \n",
+       "123846  AM-LOC  \n",
+       "123847  AM-LOC  \n",
+       "123848  AM-LOC  \n",
+       "123849       V  \n",
+       "123850      A1  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -315,7 +328,7 @@
     "\t'''\n",
     "\t\tConverts a dataset to conll format \n",
     "\t'''\n",
-    "\tdf= df[['S', 'P', 'FUNC', target_column]]\n",
+    "\tdf= df[['S', 'P', 'FUNC', target_column]].copy()\n",
     "\n",
     "\t#Replace '-' making it easier to concatenate\n",
     "\tsub_fn= lambda x: re.sub('-', '', x)\n",
@@ -365,26 +378,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/guilhermevarela/anaconda/lib/python2.7/site-packages/ipykernel/__main__.py:9: SettingWithCopyWarning: \n",
+      "/Users/guilhermevarela/anaconda/envs/tensorflow/lib/python3.6/site-packages/ipykernel_launcher.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  if __name__ == '__main__':\n"
      ]
     },
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -402,7 +427,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>-</td>\n",
-       "      <td>*</td>\n",
+       "      <td>(AM-LOC*</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -422,7 +447,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>-</td>\n",
-       "      <td>*</td>\n",
+       "      <td>*)</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -432,7 +457,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>estar</td>\n",
-       "      <td>*</td>\n",
+       "      <td>(V*)</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -442,7 +467,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>-</td>\n",
-       "      <td>*</td>\n",
+       "      <td>(A1*</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -454,15 +479,15 @@
        "</div>"
       ],
       "text/plain": [
-       "    FUNC ARG0 ARG1 ARG2 ARG3 ARG4 ARG5\n",
-       "0      -    *                         \n",
-       "1      -    *                         \n",
-       "2      -    *                         \n",
-       "3  estar    *                         \n",
-       "4      -    *                         "
+       "    FUNC      ARG0 ARG1 ARG2 ARG3 ARG4 ARG5\n",
+       "0      -  (AM-LOC*                         \n",
+       "1      -         *                         \n",
+       "2      -        *)                         \n",
+       "3  estar      (V*)                         \n",
+       "4      -      (A1*                         "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,9 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -603,21 +626,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
