--- a/notebooks/evaluations-make_conll.ipynb
+++ b/notebooks/evaluations-make_conll.ipynb
@@ -18,14 +18,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "../datasets/csvs/zhou_valid.csv\n",
-      "../outputs/dblstm_crf/lr5.00e-04_hs512x64_ctx-p1_glove_s50/08/Yhat_valid.csv\n"
+      "../outputs/dblstm_crf/lr5.00e-04_hs512x256x256x128_ctx-p3_wang2vec_s100/00/Yhat_valid.csv\n"
      ]
     }
    ],
@@ -37,8 +39,8 @@
     "\n",
     "\n",
     "MODEL_NAME='dblstm_crf'\n",
-    "HPARAMS_STR='lr5.00e-04_hs512x64_ctx-p1_glove_s50'\n",
-    "MODEL_V= '08'\n",
+    "HPARAMS_STR='lr5.00e-04_hs512x256x256x128_ctx-p3_wang2vec_s100'\n",
+    "MODEL_V= '00'\n",
     "INPUT_DIR= '../datasets/csvs/'\n",
     "OUTPUT_DIR='../outputs/'\n",
     "\n",
@@ -56,13 +58,15 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(12298, 17) (12298, 2)\n"
+      "((12298, 17), (12298, 2))\n"
      ]
     }
    ],
@@ -75,7 +79,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -93,25 +99,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -179,8 +174,8 @@
        "      <td>rei</td>\n",
        "      <td>(A2*</td>\n",
        "      <td>A2</td>\n",
-       "      <td>(AM-LOC*</td>\n",
-       "      <td>AM-LOC</td>\n",
+       "      <td>(A2*</td>\n",
+       "      <td>A2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123847</th>\n",
@@ -202,7 +197,7 @@
        "      <td>*</td>\n",
        "      <td>A2</td>\n",
        "      <td>*</td>\n",
-       "      <td>AM-LOC</td>\n",
+       "      <td>A2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123848</th>\n",
@@ -224,7 +219,7 @@
        "      <td>*)</td>\n",
        "      <td>A2</td>\n",
        "      <td>*)</td>\n",
-       "      <td>AM-LOC</td>\n",
+       "      <td>A2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123849</th>\n",
@@ -267,7 +262,7 @@
        "      <td>rei</td>\n",
        "      <td>(A1*</td>\n",
        "      <td>A1</td>\n",
-       "      <td>(A1*</td>\n",
+       "      <td>(A1*)</td>\n",
        "      <td>A1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -283,21 +278,13 @@
        "123849   4  2879  5100    0       estão      estar  estar  estar    1   entre   \n",
        "123850   5  2879  5100    0           o          o  estar      -    1   entre   \n",
        "\n",
-       "       CTX_P-2    CTX_P-1 CTX_P+1 CTX_P+2 CTX_P+3 ARG_0 ARG_1       Y_0  \\\n",
+       "       CTX_P-2    CTX_P-1 CTX_P+1 CTX_P+2 CTX_P+3 ARG_0 ARG_1    Y_0 Y_1  \n",
        "IDX                                                                       \n",
-       "123846       o  convidado       o       -     rei  (A2*    A2  (AM-LOC*   \n",
-       "123847       o  convidado       o       -     rei     *    A2         *   \n",
-       "123848       o  convidado       o       -     rei    *)    A2        *)   \n",
-       "123849       o  convidado       o       -     rei  (V*)     V      (V*)   \n",
-       "123850       o  convidado       o       -     rei  (A1*    A1      (A1*   \n",
-       "\n",
-       "           Y_1  \n",
-       "IDX             \n",
-       "123846  AM-LOC  \n",
-       "123847  AM-LOC  \n",
-       "123848  AM-LOC  \n",
-       "123849       V  \n",
-       "123850      A1  "
+       "123846       o  convidado       o       -     rei  (A2*    A2   (A2*  A2  \n",
+       "123847       o  convidado       o       -     rei     *    A2      *  A2  \n",
+       "123848       o  convidado       o       -     rei    *)    A2     *)  A2  \n",
+       "123849       o  convidado       o       -     rei  (V*)     V   (V*)   V  \n",
+       "123850       o  convidado       o       -     rei  (A1*    A1  (A1*)  A1  "
       ]
      },
      "execution_count": 4,
@@ -318,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -379,37 +366,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/guilhermevarela/anaconda/envs/tensorflow/lib/python3.6/site-packages/ipykernel_launcher.py:9: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  if __name__ == '__main__':\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -427,7 +391,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>-</td>\n",
-       "      <td>(AM-LOC*</td>\n",
+       "      <td>(A2*</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -467,7 +431,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>-</td>\n",
-       "      <td>(A1*</td>\n",
+       "      <td>(A1*)</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -479,12 +443,12 @@
        "</div>"
       ],
       "text/plain": [
-       "    FUNC      ARG0 ARG1 ARG2 ARG3 ARG4 ARG5\n",
-       "0      -  (AM-LOC*                         \n",
-       "1      -         *                         \n",
-       "2      -        *)                         \n",
-       "3  estar      (V*)                         \n",
-       "4      -      (A1*                         "
+       "    FUNC   ARG0 ARG1 ARG2 ARG3 ARG4 ARG5\n",
+       "0      -   (A2*                         \n",
+       "1      -      *                         \n",
+       "2      -     *)                         \n",
+       "3  estar   (V*)                         \n",
+       "4      -  (A1*)                         "
       ]
      },
      "execution_count": 6,
@@ -509,7 +473,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -626,21 +592,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
