--- a/notebooks/04-evaluations_conll.ipynb
+++ b/notebooks/04-evaluations_conll.ipynb
@@ -17,17 +17,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 32,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "../datasets/csvs/zhou_valid.csv\n",
-      "../outputs/dblstm_crf/lr5.00e-04_hs512x256x256x128_ctx-p3_wang2vec_s100/00/Yhat_valid.csv\n"
+      "../outputs/dblstm_crf/lr5.00e-04_hs256_ctx-p1_glove_s50/00/Yhat_valid.csv\n"
      ]
     }
    ],
@@ -39,7 +37,7 @@
     "\n",
     "\n",
     "MODEL_NAME='dblstm_crf'\n",
-    "HPARAMS_STR='lr5.00e-04_hs512x256x256x128_ctx-p3_wang2vec_s100'\n",
+    "HPARAMS_STR='lr5.00e-04_hs256_ctx-p1_glove_s50'\n",
     "MODEL_V= '00'\n",
     "INPUT_DIR= '../datasets/csvs/'\n",
     "OUTPUT_DIR='../outputs/'\n",
@@ -57,16 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 33,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "((12298, 17), (12298, 2))\n"
+      "(12298, 17) (12298, 2)\n"
      ]
     }
    ],
@@ -78,10 +74,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 34,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -98,15 +92,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 35,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -174,8 +179,8 @@
        "      <td>rei</td>\n",
        "      <td>(A2*</td>\n",
        "      <td>A2</td>\n",
-       "      <td>(A2*</td>\n",
-       "      <td>A2</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123847</th>\n",
@@ -197,7 +202,7 @@
        "      <td>*</td>\n",
        "      <td>A2</td>\n",
        "      <td>*</td>\n",
-       "      <td>A2</td>\n",
+       "      <td>*</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123848</th>\n",
@@ -218,8 +223,8 @@
        "      <td>rei</td>\n",
        "      <td>*)</td>\n",
        "      <td>A2</td>\n",
-       "      <td>*)</td>\n",
-       "      <td>A2</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123849</th>\n",
@@ -262,8 +267,8 @@
        "      <td>rei</td>\n",
        "      <td>(A1*</td>\n",
        "      <td>A1</td>\n",
-       "      <td>(A1*)</td>\n",
-       "      <td>A1</td>\n",
+       "      <td>(A2*</td>\n",
+       "      <td>A2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -278,16 +283,16 @@
        "123849   4  2879  5100    0       estão      estar  estar  estar    1   entre   \n",
        "123850   5  2879  5100    0           o          o  estar      -    1   entre   \n",
        "\n",
-       "       CTX_P-2    CTX_P-1 CTX_P+1 CTX_P+2 CTX_P+3 ARG_0 ARG_1    Y_0 Y_1  \n",
-       "IDX                                                                       \n",
-       "123846       o  convidado       o       -     rei  (A2*    A2   (A2*  A2  \n",
-       "123847       o  convidado       o       -     rei     *    A2      *  A2  \n",
-       "123848       o  convidado       o       -     rei    *)    A2     *)  A2  \n",
-       "123849       o  convidado       o       -     rei  (V*)     V   (V*)   V  \n",
-       "123850       o  convidado       o       -     rei  (A1*    A1  (A1*)  A1  "
+       "       CTX_P-2    CTX_P-1 CTX_P+1 CTX_P+2 CTX_P+3 ARG_0 ARG_1   Y_0 Y_1  \n",
+       "IDX                                                                      \n",
+       "123846       o  convidado       o       -     rei  (A2*    A2     *   *  \n",
+       "123847       o  convidado       o       -     rei     *    A2     *   *  \n",
+       "123848       o  convidado       o       -     rei    *)    A2     *   *  \n",
+       "123849       o  convidado       o       -     rei  (V*)     V  (V*)   V  \n",
+       "123850       o  convidado       o       -     rei  (A1*    A1  (A2*  A2  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -365,15 +370,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 37,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -391,7 +407,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>-</td>\n",
-       "      <td>(A2*</td>\n",
+       "      <td>*</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -411,7 +427,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>-</td>\n",
-       "      <td>*)</td>\n",
+       "      <td>*</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -431,7 +447,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>-</td>\n",
-       "      <td>(A1*)</td>\n",
+       "      <td>(A2*</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -443,15 +459,15 @@
        "</div>"
       ],
       "text/plain": [
-       "    FUNC   ARG0 ARG1 ARG2 ARG3 ARG4 ARG5\n",
-       "0      -   (A2*                         \n",
-       "1      -      *                         \n",
-       "2      -     *)                         \n",
-       "3  estar   (V*)                         \n",
-       "4      -  (A1*)                         "
+       "    FUNC  ARG0 ARG1 ARG2 ARG3 ARG4 ARG5\n",
+       "0      -     *                         \n",
+       "1      -     *                         \n",
+       "2      -     *                         \n",
+       "3  estar  (V*)                         \n",
+       "4      -  (A2*                         "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,9 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -592,21 +606,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python (tensorflow)",
    "language": "python",
-   "name": "python2"
+   "name": "tensorflow"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
