notebooks: propbankbr some more needed
Former-commit-id: 04e324d87f498de250dc1e9ca65deff9e3bb4597

--- a/notebooks/01-propbankbr_builder.ipynb
+++ b/notebooks/01-propbankbr_builder.ipynb
@@ -666,7 +666,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.1 M_R"
+    "### 2.1 M_R\n",
+    "m m_r= 1to denote the argument position if it lo-cates in the predicate context region, ormr= 0if not."
    ]
   },
   {
@@ -700,35 +701,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ## 2.2 CTX_P"
+    " ### 2.2 CTX_P"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-895aab0b58c1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mp\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mP\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mind_p\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_norm\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'P'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0mn_p\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mind_p\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mispredicate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_norm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mind_p\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'PRED'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m'-'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda/envs/tensorflow/lib/python3.6/site-packages/pandas/core/base.py\u001b[0m in \u001b[0;36m__iter__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    823\u001b[0m         \u001b[0;34m(\u001b[0m\u001b[0;32mfor\u001b[0m \u001b[0mTimestamp\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mTimedelta\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mInterval\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mPeriod\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    824\u001b[0m         \"\"\"\n\u001b[0;32m--> 825\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0miter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    826\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    827\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mcache_readonly\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda/envs/tensorflow/lib/python3.6/site-packages/pandas/core/base.py\u001b[0m in \u001b[0;36mtolist\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    813\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0m_maybe_box_datetimelike\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_values\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    814\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 815\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_values\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    816\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    817\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__iter__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Pesquisa_Datafolha', 'Pesquisa_Datafolha', 'Pesquisa_Datafolha', 'Pesquisa_Datafolha', 'Pesquisa_Datafolha', 'Pesquisa_Datafolha', 'Pesquisa_Datafolha', 'Pesquisa_Datafolha', 'Pesquisa_Datafolha', 'Pesquisa_Datafolha', 'Pesquisa_Datafolha', 'Pesquisa_Datafolha', 'Pesquisa_Datafolha', 'Pesquisa_Datafolha', 'Pesquisa_Datafolha', 'Pesquisa_Datafolha', 'Pesquisa_Datafolha', 'Pesquisa_Datafolha', 'Pesquisa_Datafolha', 'Pesquisa_Datafolha', 'Pesquisa_Datafolha', 'Pesquisa_Datafolha', 'Pesquisa_Datafolha', 'Pesquisa_Datafolha', 'Pesquisa_Datafolha']\n"
      ]
     }
    ],
    "source": [
     "CTX_P={}\n",
     "LAGS=list(filter(lambda x : x != 0,list(range(-3,4))))\n",
-    "P= list(df_norm['P'].values)\n",
+    "P= list(set(df_norm['P'].values))\n",
     "for lag in LAGS:        \n",
     "    CTX_P[lag]=[]   \n",
-    "for p in P:\n",
+    "\n",
+    "for p in P:    \n",
     "    ind_p=(df_norm['P'] == p)\n",
     "    n_p= sum(ind_p)\n",
     "    \n",
@@ -752,7 +748,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ## 2.3 PRED"
+    " ### 2.3 PRED\n",
+    "'Since a single predicate word can not exactly describe thepredicate  information,  especially  when  the  samewords appear more than one times in a sentence.With the expanded context, the ambiguity can belargely eliminated.' (ZHOU, et XU, 2015)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['revelar', 'revelar', 'revelar', 'revelar', 'revelar', 'revelar', 'revelar', 'revelar', 'revelar', 'revelar', 'revelar', 'revelar', 'revelar', 'revelar', 'revelar', 'revelar', 'revelar', 'revelar', 'revelar', 'revelar', 'revelar', 'revelar', 'revelar', 'revelar', 'revelar', 'revelar', 'revelar', 'revelar', 'revelar', 'revelar', 'revelar', 'revelar', 'revelar', 'recusar', 'recusar']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# deep_columns= ['M_R'] + [ 'CTX_P{:+}'.format(key) for key in CTX_P] \n",
+    "P= list(set(df_norm['P'].values))\n",
+    "predindex=(df_norm.loc[:, 'PRED'] !=  '-').values\n",
+    "PRED_p= df_norm.loc[predindex, 'PRED'].values\n",
+    "PRED=[]\n",
+    "\n",
+    "for p in P:\n",
+    "    ind_p=(df_norm['P'] == p)\n",
+    "    p_len = sum(ind_p)        \n",
+    "    PRED += [PRED_p[p-1]] * p_len\n",
+    "\n",
+    "print(PRED[:35])    "
    ]
   },
   {
@@ -762,18 +787,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "# deep_columns= ['M_R'] + [ 'CTX_P{:+}'.format(key) for key in CTX_P] \n",
-    "P= list(df_norm['P'].values)\n",
-    "PRED=[]\n",
-    "for p in P:\n",
-    "    ind_p=(df_norm['P'] == p)\n",
-    "    p_len = sum(ind_p)    \n",
-    "    pred= min((df_norm.loc[ind_p, 'PRED'] !=  '_').values)\n",
-    "    PRED+= pred * p_len\n",
-    "\n",
-    "print(PRED[:35])    "
-   ]
+   "source": []
   }
  ],
  "metadata": {
