--- a/notebooks/04-evaluations_conll.ipynb
+++ b/notebooks/04-evaluations_conll.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -201,8 +201,8 @@
        "      <td>rei</td>\n",
        "      <td>*</td>\n",
        "      <td>A2</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
+       "      <td>(A2*</td>\n",
+       "      <td>A2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123848</th>\n",
@@ -223,8 +223,8 @@
        "      <td>rei</td>\n",
        "      <td>*)</td>\n",
        "      <td>A2</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
+       "      <td>*)</td>\n",
+       "      <td>A2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123849</th>\n",
@@ -267,7 +267,7 @@
        "      <td>rei</td>\n",
        "      <td>(A1*</td>\n",
        "      <td>A1</td>\n",
-       "      <td>(A2*</td>\n",
+       "      <td>(A2*)</td>\n",
        "      <td>A2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -283,16 +283,16 @@
        "123849   4  2879  5100    0       estão      estar  estar  estar    1   entre   \n",
        "123850   5  2879  5100    0           o          o  estar      -    1   entre   \n",
        "\n",
-       "       CTX_P-2    CTX_P-1 CTX_P+1 CTX_P+2 CTX_P+3 ARG_0 ARG_1   Y_0 Y_1  \n",
-       "IDX                                                                      \n",
-       "123846       o  convidado       o       -     rei  (A2*    A2     *   *  \n",
-       "123847       o  convidado       o       -     rei     *    A2     *   *  \n",
-       "123848       o  convidado       o       -     rei    *)    A2     *   *  \n",
-       "123849       o  convidado       o       -     rei  (V*)     V  (V*)   V  \n",
-       "123850       o  convidado       o       -     rei  (A1*    A1  (A2*  A2  "
+       "       CTX_P-2    CTX_P-1 CTX_P+1 CTX_P+2 CTX_P+3 ARG_0 ARG_1    Y_0 Y_1  \n",
+       "IDX                                                                       \n",
+       "123846       o  convidado       o       -     rei  (A2*    A2      *   *  \n",
+       "123847       o  convidado       o       -     rei     *    A2   (A2*  A2  \n",
+       "123848       o  convidado       o       -     rei    *)    A2     *)  A2  \n",
+       "123849       o  convidado       o       -     rei  (V*)     V   (V*)   V  \n",
+       "123850       o  convidado       o       -     rei  (A1*    A1  (A2*)  A2  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>-</td>\n",
-       "      <td>*</td>\n",
+       "      <td>(A2*</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -427,7 +427,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>-</td>\n",
-       "      <td>*</td>\n",
+       "      <td>*)</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -447,7 +447,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>-</td>\n",
-       "      <td>(A2*</td>\n",
+       "      <td>(A2*)</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -459,15 +459,15 @@
        "</div>"
       ],
       "text/plain": [
-       "    FUNC  ARG0 ARG1 ARG2 ARG3 ARG4 ARG5\n",
-       "0      -     *                         \n",
-       "1      -     *                         \n",
-       "2      -     *                         \n",
-       "3  estar  (V*)                         \n",
-       "4      -  (A2*                         "
+       "    FUNC   ARG0 ARG1 ARG2 ARG3 ARG4 ARG5\n",
+       "0      -      *                         \n",
+       "1      -   (A2*                         \n",
+       "2      -     *)                         \n",
+       "3  estar   (V*)                         \n",
+       "4      -  (A2*)                         "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
