--- a/notebooks/01-propbankbr_builder.ipynb
+++ b/notebooks/01-propbankbr_builder.ipynb
@@ -12,7 +12,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#data_propbankbr lives within datasets\n",
@@ -833,7 +835,9 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def propbankbr_make_targets(propositions, arguments):\n",
@@ -1056,7 +1060,9 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_db= df_norm.join(df_deep, how='inner')\n",
@@ -1072,6 +1078,18 @@
    "display_name": "Python (tensorflow)",
    "language": "python",
    "name": "tensorflow"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
