--- a/notebooks/01-propbankbr_builder.ipynb
+++ b/notebooks/01-propbankbr_builder.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "4     0   STA      (VP*)  revelar  (V*)    *    *    *  NaN  NaN  NaN  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
        "4         0   STA      (VP*)  revelar  (V*)  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +623,7 @@
        "4         0   STA      (VP*)  revelar  (V*)  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +691,7 @@
        "[0, 0, 0, 0, 1, 1, 1, 1, 1, 1]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1042,7 @@
        "4        1  revelar   V  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1050,16 +1050,17 @@
    "source": [
     "#Make columns\n",
     "columns_names= ['M_R', 'PRED_1'] + ['CTX_P{:+}'.format(key) for key in CTX_P] + ['T']\n",
-    "CTX_P = [values\n",
+    "CTX_P_data = [values\n",
     "        for _, values in CTX_P.items()]\n",
-    "data= [M_R, PRED_1] + CTX_P + [T]\n",
+    "data= [M_R, PRED_1] + CTX_P_data + [T]\n",
+    "d= dict(zip(columns_names, data))\n",
     "df_deep = pd.DataFrame(d, index=df_norm.index)\n",
     "df_deep.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -1067,6 +1068,7 @@
    "source": [
     "df_db= df_norm.join(df_deep, how='inner')\n",
     "df_dbtrain, df_dbvalid, df_dbtest = propbankbr_split(df_db)\n",
+    "df_db.to_csv('../datasets/csvs/db_pt.csv', sep=',')\n",
     "df_dbtrain.to_csv('../datasets/csvs/dbtrain_pt.csv', sep=',')\n",
     "df_dbvalid.to_csv('../datasets/csvs/dbvalid_pt.csv', sep=',')\n",
     "df_dbtest.to_csv('../datasets/csvs/dbtest_pt.csv', sep=',')"
